Now approaching the milestone of Learning Part.

--- a/locales/zh/resource.json
+++ b/locales/zh/resource.json
@@ -9,7 +9,8 @@
 		"Confirm": "确认",
 		"Date": "日期",
 		"Precent": "百分比",
-		
+		"Close": "关闭",
+
 		"ListView": "列表视图",
 		"HierarchyView": "树形视图",
 		"Themes": "主题",
