--- a/locales/en/resource.json
+++ b/locales/en/resource.json
@@ -9,6 +9,7 @@
 		"Confirm": "Confirm",
 		"Date": "Date",
 		"Precent": "Precentage",
+		"Close": "Close",
 
 		"ListView": "List View",
 		"HierarchyView": "Hierarchy View",
