Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -106,6 +106,7 @@
 		"Account": "Account",
   		"AccountCategory": "Account Category",
   		"Documents": "Documents",
+  		"Document": "Document",
   		"PostDocument": "Post Document",
   		"Controlling": "Controlling",
   		"ControlCenter": "Control Center",
