Change-Id: I5bbe8a9f26a439eb126dbb68487a843d411c9246 Signed-off-by: Alva Chien <alvachien@163.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -121,6 +121,9 @@
   		"ControlCenterReport": "Control Center Report",
   		"InternalOrderReport": "Internal Order Report",
   		"DailyBalanceReport": "The Daily Balance Sheet",
+		"CreateItem": "Create an Item",
+		"DeleteItem": "Delete an Item",
+		"ItemID": "Item ID",
   		
   		"AccountsDesp": "Finance accounts show all accounts in the list view.",
   		"Asset": "Asset",
