--- a/locales/en.json
+++ b/locales/en.json
@@ -36,7 +36,8 @@
 		"Parent": "Parent",
 		"Text": "Text",
 		
-		"ConfirmToDeleteSelectedItem": "The selected item will be deleted. Do you confirm to continue?"
+		"DeleteConfirmation" : "Delete Confirmation",
+		"ConfirmToDeleteSelectedItem": "The selected item(s) will be deleted. Do you confirm to continue?"
 	},
 	
 	
