Continues the JavaScript OO adaption, part VI.

--- a/locales/en.json
+++ b/locales/en.json
@@ -33,6 +33,7 @@
 		"Content": "Content",
 		"Comment": "Comment",
 		"CategoryID": "Category ID",
+		"CategoryName": "Category Name",
 		"Parent": "Parent",
 		"Text": "Text",
 		
