--- a/locales/zh.json
+++ b/locales/zh.json
@@ -38,7 +38,8 @@
 		"Text": "文本",
 		
 		"DeleteConfirmation" : "确认删除操作",
-		"ConfirmToDeleteSelectedItem": "选择项将被删除，请确认继续？"		
+		"ConfirmToDeleteSelectedItem": "选择项将被删除，请确认继续？",
+		"SearchViaName": "根据名字来搜索项..."
 	},
 	
 	
