--- a/locales/zh.json
+++ b/locales/zh.json
@@ -36,6 +36,8 @@
 		"CategoryName": "类别名称",
 		"Parent": "父对象",
 		"Text": "文本",
+		"ValidFrom": "有效期始",
+		"ValidTo": "有效期至",
 		
 		"DeleteConfirmation" : "确认删除操作",
 		"ConfirmToDeleteSelectedItem": "选择项将被删除，请确认继续？",
