--- a/locales/en.json
+++ b/locales/en.json
@@ -154,6 +154,7 @@
 		"InvalidValidDate": "Invalid valid from/to date",
 		"MissingSettlementRules": "Missing settlement rules",
 		"InvalidTotalPrecentage": "Invalid total precentage",
-		"DuplicateControlCenterInSRule": "Control Center {{ccid}} with name {{ccname}} occurred more than once" 
+		"DuplicateControlCenterInSRule": "Control Center {{ccid}} with name {{ccname}} occurred more than once",
+		"SelectSingleOrderForDeletion": "Select one Order for deletion" 
 	}
  }
