--- a/locales/zh.json
+++ b/locales/zh.json
@@ -154,6 +154,7 @@
 		"InvalidValidDate": "不合法的有效期",
 		"MissingSettlementRules": "缺少结算规则",
 		"InvalidTotalPrecentage": "不合法的百分比总和",
-		"DuplicateControlCenterInSRule": "控制中心{{ccid}}(名称:{{ccname}})被使用了多次" 
+		"DuplicateControlCenterInSRule": "控制中心{{ccid}}(名称:{{ccname}})被使用了多次",
+		"SelectSingleOrderForDeletion": "选择一个定单来进行删除"
 	}
 }
