Now the Control Center Create/Delete/List Read/Hierarchy Read is ready.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -155,6 +155,7 @@
 		"MissingSettlementRules": "Missing settlement rules",
 		"InvalidTotalPrecentage": "Invalid total precentage",
 		"DuplicateControlCenterInSRule": "Control Center {{ccid}} with name {{ccname}} occurred more than once",
-		"SelectSingleOrderForDeletion": "Select one Order for deletion" 
+		"SelectSingleOrderForDeletion": "Select one Order for deletion",
+		"SelectSingleItemForDeletion": "Select one single item for deletion" 
 	}
  }
