Continues the development。
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -38,6 +38,7 @@
 		"Text": "Text",
 		"ValidFrom": "Valid From",
 		"ValidTo": "Valid To",
+		"Description": "Description",
 		
 		"DeleteConfirmation" : "Delete Confirmation",
 		"ConfirmToDeleteSelectedItem": "The selected item(s) will be deleted. Do you confirm to continue?",
