--- a/locales/zh.json
+++ b/locales/zh.json
@@ -38,6 +38,7 @@
 		"Text": "文本",
 		"ValidFrom": "有效期始",
 		"ValidTo": "有效期至",
+		"Description": "描述",
 		
 		"DeleteConfirmation" : "确认删除操作",
 		"ConfirmToDeleteSelectedItem": "选择项将被删除，请确认继续？",
