Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -157,6 +157,7 @@
 		"InvalidTotalPrecentage": "Invalid total precentage",
 		"DuplicateControlCenterInSRule": "Control Center {{ccid}} with name {{ccname}} occurred more than once",
 		"SelectSingleOrderForDeletion": "Select one Order for deletion",
-		"SelectSingleItemForDeletion": "Select one single item for deletion" 
+		"SelectSingleItemForDeletion": "Select one single item for deletion",
+		"InvalidAccount": "Account is invalid"
 	}
  }
