--- a/locales/zh.json
+++ b/locales/zh.json
@@ -129,11 +129,12 @@
   		"Reports": "报表",
   		"BalanceReport": "资产负债报表",
   		"ControlCenterReport": "控制中心报表",
-  		"InternalOrderReport": "内部订单报表",
+  		"OrderReport": "订单报表",
   		"DailyBalanceReport": "日常开支表",
 		"CreateItem": "新建行项目",
 		"DeleteItem": "删除行项目",
 		"ItemID": "行项目ID",
+		"Balance": "余额",
 
   		"AccountsDesp": "当前系统中所有的账户以列表形式呈现。",
   		"Asset": "资产",
