--- a/locales/zh.json
+++ b/locales/zh.json
@@ -141,6 +141,8 @@
 		"SaveCurrentItem": "保存当前行项目",
 		"CancelItemEditing": "取消当前行项目",
 		"Setting": "财务设置",
+		"ExchangeRate": "汇率",
+		"ProposedExchangeRate": "预测汇率",
 
   		"AccountsDesp": "当前系统中所有的账户以列表形式呈现。",
   		"Asset": "资产",
