Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -195,6 +195,8 @@
 		"DuplicateAccountsInTransferDoc": "Cannot transfer amount in same account",
 		"InvalidRefCurrExgDoc": "Invalid reference currency exchange document",
 		"InvalidExchangeRate": "Invalid exchange rate",
-		"LearnObjectStillInUse": "Learn objects still in use"
+		"LearnObjectStillInUse": "Learn objects still in use",
+		"InvalidLearnOBject": "Invalid learn object",
+		"InvalidUser": "Invalid user"
 	}
  }
