Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -48,6 +48,9 @@
 		"Completed": "Completed",
 		"Aborted": "Aborted",
 		"Operations": "Operations",
+		"Count": "Count",
+		"Sum": "Sum",
+		"Max": "Max",
 		
 		"DeleteConfirmation" : "Delete Confirmation",
 		"ConfirmToDeleteSelectedItem": "The selected item(s) will be deleted. Do you confirm to continue?",
