--- a/locales/zh.json
+++ b/locales/zh.json
@@ -48,6 +48,9 @@
 		"Completed": "已完成",
 		"Aborted": "已放弃",
 		"Operations": "操作",
+		"Count": "总计",
+		"Sum": "总和",
+		"Max": "最大值",
 		
 		"DeleteConfirmation" : "确认删除操作",
 		"ConfirmToDeleteSelectedItem": "选择项将被删除，请确认继续？",
