Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -162,13 +162,22 @@
 		"OrderReport": "Order Report",
   		"DailyBalanceReport": "The Daily Balance Sheet",
 		"CreateItem": "Create an Item",
+		"DisplayItem": "Display an Item",
+		"EditItem": "Edit an Item",
 		"DeleteItem": "Delete an Item",
 		"ItemID": "Item ID",
 		"Balance": "Balance",
 		"DocumentHeader": "Header",
 		"DocumentItem": "Item",
 		"SaveCurrentItem": "Save Current Item",
-		"CancelItemEditing": "Cancel Item Editing",		
+		"CancelItemEditing": "Cancel Item Editing",
+		"SaveCurrentRule": "Save Current Rule",
+		"CancelRuleEditing": "Cancel Rule Editing",
+		"CreateRule": "Create a Rule",
+		"DisplayRule": "Display a Rule",
+		"EditRule": "Edit a Rule",
+		"OrderHeader": "Header",
+		"Rules": "Rules",
   		"Setting": "Finance Setting",
 		"ExchangeRate": "Exchange Rate",
 		"ProposedExchangeRate": "Proposed Exchange Rate",
