--- a/locales/zh.json
+++ b/locales/zh.json
@@ -161,6 +161,8 @@
   		"OrderReport": "订单报表",
   		"DailyBalanceReport": "日常开支表",
 		"CreateItem": "新建行项目",
+		"DisplayItem": "显示行项目",
+		"EditItem": "编辑行项目",
 		"DeleteItem": "删除行项目",
 		"ItemID": "行项目ID",
 		"Balance": "余额",
@@ -168,6 +170,13 @@
 		"DocumentItem": "行项目",
 		"SaveCurrentItem": "保存当前行项目",
 		"CancelItemEditing": "取消当前行项目",
+		"SaveCurrentRule": "保存当前规则",
+		"CancelRuleEditing": "取消当前规则",
+		"CreateRule": "创建规则",
+		"DisplayRule": "显示规则",
+		"EditRule": "编辑规则",
+		"OrderHeader": "头信息",
+		"Rules": "规则",
 		"Setting": "财务设置",
 		"ExchangeRate": "汇率",
 		"ProposedExchangeRate": "预测汇率",
