Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -16,6 +16,7 @@
 		"Themes": "Themes",
 		"Default": "Default",
 		"BackToList": "Back to List",
+		"GoDetail": "Go Detail",
 		
 		"New": "New",
 		"Change" : "Change",
