--- a/locales/zh.json
+++ b/locales/zh.json
@@ -16,6 +16,7 @@
 		"Themes": "主题",
 		"Default": "默认",
 		"BackToList": "返回列表视图",
+		"GoDetail": "查看详细",
 
 		"New": "新建",
         "Change": "修改",
