Continues the development.

--- a/locales/en.json
+++ b/locales/en.json
@@ -183,6 +183,8 @@
 		"ExchangeRate": "Exchange Rate",
 		"ProposedExchangeRate": "Proposed Exchange Rate",
 		"LocalCurrency": "Local Currency",
+        "Downpayment": "Downpayment",
+        "RefDoc": "Ref. Doc",
 		  
   		"AccountsDesp": "Finance accounts show all accounts in the list view.",
   		"Asset": "Asset",
