--- a/locales/zh.json
+++ b/locales/zh.json
@@ -182,6 +182,8 @@
 		"ExchangeRate": "汇率",
 		"ProposedExchangeRate": "预测汇率",
 		"LocalCurrency": "本币",
+        "Downpayment": "预收款/预付款",
+        "RefDoc": "关联凭证",
 
   		"AccountsDesp": "当前系统中所有的账户以列表形式呈现。",
   		"Asset": "资产",
